# serializer version: 1
# name: test_numbers.1
  list([
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'current',
        'friendly_name': 'Test Charge current',
        'max': 32,
        'min': 0,
        'mode': <NumberMode.AUTO: 'auto'>,
        'step': 1,
        'unit_of_measurement': <UnitOfElectricCurrent.AMPERE: 'A'>,
      }),
      'context': <ANY>,
      'entity_id': 'number.test_charge_current',
      'last_changed': <ANY>,
      'last_updated': <ANY>,
      'state': '16.0',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'battery',
        'friendly_name': 'Test Charge limit',
        'max': 100,
        'min': 50,
        'mode': <NumberMode.AUTO: 'auto'>,
        'step': 1,
        'unit_of_measurement': '%',
      }),
      'context': <ANY>,
      'entity_id': 'number.test_charge_limit',
      'last_changed': <ANY>,
      'last_updated': <ANY>,
      'state': '80.0',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'speed',
        'friendly_name': 'Test Speed limit',
        'max': 120,
        'min': 50,
        'mode': <NumberMode.BOX: 'box'>,
        'step': 1,
        'unit_of_measurement': <UnitOfSpeed.MILES_PER_HOUR: 'mph'>,
      }),
      'context': <ANY>,
      'entity_id': 'number.test_speed_limit',
      'last_changed': <ANY>,
      'last_updated': <ANY>,
      'state': '60.0',
    }),
  ])
# ---
# name: test_numbers[all]
  list([
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'current',
        'friendly_name': 'Test Charge current',
        'max': 32,
        'min': 0,
        'mode': <NumberMode.AUTO: 'auto'>,
        'step': 1,
        'unit_of_measurement': <UnitOfElectricCurrent.AMPERE: 'A'>,
      }),
      'context': <ANY>,
      'entity_id': 'number.test_charge_current',
      'last_changed': <ANY>,
      'last_updated': <ANY>,
      'state': '32',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'battery',
        'friendly_name': 'Test Charge limit',
        'max': 100,
        'min': 50,
        'mode': <NumberMode.AUTO: 'auto'>,
        'step': 1,
        'unit_of_measurement': '%',
      }),
      'context': <ANY>,
      'entity_id': 'number.test_charge_limit',
      'last_changed': <ANY>,
      'last_updated': <ANY>,
      'state': '80',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'speed',
        'friendly_name': 'Test Speed limit',
        'max': 120,
        'min': 50,
        'mode': <NumberMode.BOX: 'box'>,
        'step': 1,
        'unit_of_measurement': <UnitOfSpeed.MILES_PER_HOUR: 'mph'>,
      }),
      'context': <ANY>,
      'entity_id': 'number.test_speed_limit',
      'last_changed': <ANY>,
      'last_updated': <ANY>,
      'state': '74.564543',
    }),
  ])
# ---
